jerry-core/parser/js/new-parser/tests/js/lexer/number-invalid-exponent2.js
/* This test contains number literal parser tests. */

.00e000 ; a .e ; 12e-001 ; 7.e5 ; 0.e+09 ;

.633e
